API keywords image

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "build:pages": "node scripts/build-pages.js",
+    "keywords:generate": "node scripts/generate-keywords.mjs",
     "dev-certs": "npx office-addin-dev-certs install --days 365",
     "verify-certs": "npx office-addin-dev-certs verify"
   },
